--- a/RyanShafferSite /index.html
+++ b/RyanShafferSite /index.html
@@ -15,14 +15,15 @@
       I build brands, visuals, and digital experiences with a focus on clear structure and storytelling.
     </p>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+   <nav>
+  <ul>
+    <li><a href="./index.html">Home</a></li>
+    <li><a href="./about.html">About</a></li>
+    <li><a href="./projects.html">Projects</a></li>
+    <li><a href="./contact.html">Contact</a></li>
+  </ul>
+</nav>
+
   </header>
 
   <main>
