--- a/Ica4b/index.html
+++ b/Ica4b/index.html
@@ -1,3 +1,12 @@
+
+<!--
+Screen reader check:
+- Page starts with a clear H1, then main content, then complementary info in an aside, then footer.
+- Nav is identified as navigation and link text is descriptive.
+- Headings are in order (H1 → H2 → H3) so it’s easy to skim by headings.
+- Lists are announced as lists; sections have meaningful headings.
+- CSS fixes: no layout-only divs needed; spacing handled with semantic elements.
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
