--- a/wa/wa5/wa5.html
+++ b/wa/wa5/wa5.html
@@ -1,172 +1,190 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Accessibility assessment</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Accessibility assessment</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style.css">
-    
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <!-- the below three lines are a fix to get HTML5 semantic elements working in old versions of Internet Explorer-->
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
+<body>
 
-  <body>
-     <h1><font size="7">Welcome to our wildlife website</font></h1>
-    <div class="nav">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Our team</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
+<header id="home">
+  <h1>Welcome to our wildlife website</h1>
 
-      <form class="search">
-        <input type="search" name="q" placeholder="Search query">
-        <input type="submit" value="Go!">
-      </form>
-    </div>
+  <nav class="nav" aria-label="Main navigation">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#team">Our team</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#blog">Blog</a></li>
+    </ul>
 
-    <main>
-      <article>
-        <font size="6">The trouble with Bears</font>
-        <br><br>
-        By Evan Wild
-        <br><br>
-        Tall, lumbering, angry, dangerous. The real live bears of this world are proud, independent creatures, self-serving and always on the hunt for food. Nothing like the bears you see on TV, like Baloo from renowned documentary, The Jungle Book.
-        <br><br>
-        So what are bears really like, and why does the world's media portray them with such a skewed vision? In this article we try to answer those questions, and give you a real insight into the life of the bear.
-        <br><br>
-        <font size="5">Types of bear</font>
-        <br><br>
-        Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub) from another species.
-        <br><br>
-        Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.
-        <br><br>
-        <table>
-          <thead>
-            <tr>
-              <td>Bear Type</td>
-              <td>Coat</td>
-              <td>Adult size</td>
-              <td>Habitat</td>
-              <td>Lifespan</td>
-              <td>Diet</td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Wild</td>
-              <td>Brown or black</td>
-              <td>1.4 to 2.8 meters</td>
-              <td>Woods and forests</td>
-              <td>25 to 28 years</td>
-              <td>Fish, meat, plants</td>
-            </tr>
-            <tr>
-              <td>Urban</td>
-              <td>North Face</td>
-              <td>18 to 22</td>
-              <td>Condos and coffee shops</td>
-              <td>20 to 32 years</td>
-              <td>Starbucks, sushi</td>
-            </tr>
-          </tbody>
-        </table>
+    <!-- Accessible search -->
+    <form class="search" role="search" action="https://www.google.com/search" method="get">
+      <label for="search-box" class="sr-only">Search the site</label>
+      <input id="search-box" type="search" name="q" placeholder="Search query">
+      <input type="submit" value="Go!">
+    </form>
+  </nav>
+</header>
 
-        <font size="5">Habitats and Eating habits</font>
-        <br><br>
-        Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
-        <br><br>
-        <img src="media/wild-bear.jpg"><audio controls="controls" src="media/bear.mp3">
-        <br><br>
-        Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.
-        <br><br>
-        <img src="media/urban-bear.jpg"><audio controls="controls" src="media/bear.ogg"
-        <br><br>
-        Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.
-        <br><br>
-        <font size="5">Mating rituals</font>
-        <br><br>
-        Bears are romantic creatures by nature, and will naturally look for a mate that they can spend the rest of their lives with. They will woo a potential suitor by making their dwelling look attractive — for example with cave paintings or a bed of reeds in the case of a wild bear, and mood lighting and a Michael Bublé CD in the case of an urban bear.
-        <br><br>
-        The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
-        <br><br>
-        <audio controls>
-          <source src="media/bear.mp3" type="audio/mp3">
-          <source src="media/bear.ogg" type="audio/ogg">
-          <p>It looks like your browser doesn't support HTML5 audio players.</p>
-        </audio>
+<main>
 
-        <aside>
+<article id="blog">
 
-          <font size="5">About the author</font>
-        <br><br>
-          Evan Wild is an unemployed plumber from Doncaster, who has been really "in to" wildlife since childhood. He once went to Chester Zoo on holiday, but got ill after eating a doner kebab.
-        <br><br>
-          He has never seen a bear, but once read a Daily Mail article about them, and thinks they sound cool.
+<h2>The trouble with Bears</h2>
+<p>By Evan Wild</p>
 
-        </aside>
-        <section class="comments">
-          <div class="show-hide">Show comments</div>
+<p>
+Tall, lumbering, angry, dangerous. The real live bears of this world are proud,
+independent creatures, self-serving and always on the hunt for food.
+</p>
 
-          <div class="comment-wrapper">
+<h3>Types of bear</h3>
 
-            <font size="6">Add comment</font>
+<table>
+<caption>Comparison of bear types and characteristics</caption>
+<thead>
+<tr>
+<th scope="col">Bear Type</th>
+<th scope="col">Coat</th>
+<th scope="col">Adult size</th>
+<th scope="col">Habitat</th>
+<th scope="col">Lifespan</th>
+<th scope="col">Diet</th>
+</tr>
+</thead>
 
-            <form class="comment-form">
-              <div class="flex-pair">
-                Your name:
-                <input type="text" name="name" id="name" placeholder="Enter your name">
-              </div>
-              <div class="flex-pair">
-                Your comment:
-                <input type="text" name="comment" id="comment" placeholder="Enter your comment">
-              </div>
-              <div>
-                <input type="submit" value="Submit comment">
-              </div>
-            </form>
+<tbody>
+<tr>
+<th scope="row">Wild</th>
+<td>Brown or black</td>
+<td>1.4 to 2.8 meters</td>
+<td>Woods and forests</td>
+<td>25 to 28 years</td>
+<td>Fish, meat, plants</td>
+</tr>
 
-            <font size="6">Comments</font>
+<tr>
+<th scope="row">Urban</th>
+<td>North Face</td>
+<td>18 to 22</td>
+<td>Condos and coffee shops</td>
+<td>20 to 32 years</td>
+<td>Starbucks, sushi</td>
+</tr>
+</tbody>
+</table>
 
-            <ul class="comment-container">
+<h3>Habitats and eating habits</h3>
 
-              <li>
+<figure>
+<img src="media/wild-bear.jpg" alt="A wild bear standing in a forest">
+<figcaption>Wild bear in its natural habitat</figcaption>
+</figure>
 
-                <p>Bob Fossil</p>
+<audio controls>
+<source src="media/bear.mp3" type="audio/mpeg">
+<source src="media/bear.ogg" type="audio/ogg">
+<p>
+Your browser doesn't support audio.
+<a href="media/bear.mp3">Download audio</a>
+</p>
+</audio>
 
-                <p>Oh I am so glad you taught me all about the big brown angry guys in the woods. With their sniffing little noses and their bad attitudes, they can sure be a menace — I was thinking of putting them all in a truck and driving them outta here. I run a zoo, you know.</p>
+<details>
+<summary>Transcript</summary>
+<p>Audio recording of bear sounds and narration describing bear habitats.</p>
+</details>
 
-              </li>
+<figure>
+<img src="media/urban-bear.jpg" alt="An urban bear near a city street">
+<figcaption>Urban bear in a developed environment</figcaption>
+</figure>
 
-            </ul>
+<h3>Mating rituals</h3>
 
-          </div>
-        </section>
-      </article>
+<audio controls>
+<source src="media/bear.mp3" type="audio/mpeg">
+<source src="media/bear.ogg" type="audio/ogg">
+<p>
+Your browser doesn't support audio.
+<a href="media/bear.mp3">Download audio</a>
+</p>
+</audio>
 
-      <div class="secondary">
-        <font size="6">Related</font>
+<details>
+<summary>Transcript</summary>
+<p>Description of bear mating rituals and expert commentary.</p>
+</details>
 
-        <ul>
-          <li><a href="#">The trouble with Bees</a></li>
-          <li><a href="#">The trouble with Otters</a></li>
-          <li><a href="#">The trouble with Penguins</a></li>
-          <li><a href="#">The trouble with Octopi</a></li>
-          <li><a href="#">The trouble with Lemurs</a></li>
-        </ul>
-      </div>
-    </main>
+<aside id="team">
+<h3>About the author</h3>
+<p>
+Evan Wild is an unemployed plumber from Doncaster who has been interested in wildlife since childhood.
+</p>
+</aside>
 
-    <footer>
-      <p>©Copyright 2050 by nobody. All rights reversed.</p>
-    </footer>
+<section class="comments" id="projects">
 
-    <script src="main.js"></script>
+<button class="show-hide" onclick="toggleComments()">Show comments</button>
 
-  </body>
+<div class="comment-wrapper" id="commentsBox" style="display:none;">
+
+<h3>Add comment</h3>
+
+<form class="comment-form">
+
+<div class="flex-pair">
+<label for="name">Your name:</label>
+<input type="text" id="name" placeholder="Enter your name">
+</div>
+
+<div class="flex-pair">
+<label for="comment">Your comment:</label>
+<input type="text" id="comment" placeholder="Enter your comment">
+</div>
+
+<div>
+<input type="submit" value="Submit comment">
+</div>
+
+</form>
+
+<h3>Comments</h3>
+
+<ul class="comment-container">
+<li>
+<p>Bob Fossil</p>
+<p>Great article about bears!</p>
+</li>
+</ul>
+
+</div>
+</section>
+
+</article>
+
+</main>
+
+<footer>
+<p>©Copyright 2050 by nobody. All rights reversed.</p>
+</footer>
+
+<script>
+function toggleComments() {
+  const box = document.getElementById("commentsBox");
+  if (box.style.display === "none") {
+    box.style.display = "block";
+  } else {
+    box.style.display = "none";
+  }
+}
+</script>
+
+</body>
 </html>
+
