--- a/Ica7/Ica7.html
+++ b/Ica7/Ica7.html
@@ -14,7 +14,7 @@
       }
 
       h1 {
-        color:hotpink;
+        color: hotpink;
         font-size: 2em;
         font-family: Georgia, "Times New Roman", Times, serif;
         border-bottom: 10px dotted purple;
@@ -22,6 +22,7 @@
 
       h2 {
         font-size: 1.5em;
+        font-style: italic;
       }
 
       .job-title {
@@ -29,13 +30,19 @@
         font-weight: bold;
       }
 
+      ul {
+        background-color: #eeeeee;
+        border: 5px solid purple;
+        padding: 10px;
+      }
+
       a:link,
       a:visited {
-        color: #0fb615;
+        color: purple;
       }
 
       a:hover {
-        text-decoration: none;
+        color: green;
       }
     </style>
   </head>
@@ -57,12 +64,8 @@
     </p>
 
     <h2>Contact information</h2>
-    <style>
-        li { 
-            background-color: #999999;
-            border: 5px solid rebeccapurple;
-        }
-    </style><ul>
+
+    <ul>
       <li>
         Email:
         <a href="mailto:jane@example.com">jane@example.com</a>
